# compose-example

./: README.md  config.yml
crates/aggregate/: Cargo.toml
crates/aggregate/src/: lib.rs
crates/aggregate/tests/: mod.rs
crates/aggregate/wit/: world.wit
crates/count/: Cargo.toml
crates/count/src/: lib.rs
crates/count/wit/: world.wit
crates/increment/: Cargo.toml
crates/increment/src/: lib.rs
crates/increment/wit/: world.wit
crates/show/: Cargo.toml
crates/show/src/: lib.rs
crates/show/wit/: world.wit
